--- a/icustom.security/src/main/resources/application.properties
+++ b/icustom.security/src/main/resources/application.properties
@@ -1,16 +1,42 @@
-jdbc.driverClassName = com.mysql.jdbc.Driver
-jdbc.url = jdbc:mysql://127.0.0.1:3306/bootsample
-jdbc.username = root
-jdbc.password = guang8
-hibernate.dialect = org.hibernate.dialect.MySQLDialect
 
-hibernate.show_sql = true
-hibernate.format_sql = true
 
+spring.datasource.url=jdbc:mysql://127.0.0.1:3306/bootsample?useUnicode=true&characterEncoding=UTF-8
+spring.datasource.username=root
+spring.datasource.password=guang8
+spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jackson.serialization.indent_output=true
+
+# mybatis
+spring.datasource1.name=bootsample
+spring.datasource1.url=jdbc:mysql://127.0.0.1:3306/bootsample
+spring.datasource1.username=root
+spring.datasource1.password:guang8
+        # use druid datasource poll 
+spring.datasource1.type=com.alibaba.druid.pool.Druiddatasource1
+spring.datasource1.driver-class-name=com.mysql.jdbc.Driver
+spring.datasource1.filters=stat
+spring.datasource1.maxActive=20
+spring.datasource1.initialSize=1
+spring.datasource1.maxWait=60000
+spring.datasource1.minIdle=1
+spring.datasource1.timeBetweenEvictionRunsMillis=60000
+spring.datasource1.minEvictableIdleTimeMillis=300000
+spring.datasource1.validationQuery=select 'x'
+spring.datasource1.testWhileIdle=true
+spring.datasource1.testOnBorrow=false
+spring.datasource1.testOnReturn=false
+spring.datasource1.poolPreparedStatements=true
+spring.datasource1.maxOpenPreparedStatements=20
+
+mybatis.mapperLocations=classpath:mapper/*.xml
+mybatis.typeAliasesPackage=com.gwtjs.springsecurity.entity
 
 #spring.mvc.view.prefix: /WEB-INF/views/jsp/
 #spring.mvc.view.suffix: .jsp
-#application.message: icustom Phil
+#application.message: icustom 
 
 # jdbc.driverClassName = oracle.jdbc.driver.OracleDriver
 # jdbc.url = jdbc:oracle:thin:@192.168.247.132:1521:orcl
