successfull spring security

--- a/icustom.security/src/main/resources/application.properties
+++ b/icustom.security/src/main/resources/application.properties
@@ -10,29 +10,29 @@ spring.jpa.show-sql=true
 spring.jackson.serialization.indent_output=true
 
 # mybatis
-spring.datasource1.name=bootsample
-spring.datasource1.url=jdbc:mysql://127.0.0.1:3306/bootsample
-spring.datasource1.username=root
-spring.datasource1.password:guang8
+spring.mybatis.datasource.name=bootsample
+spring.mybatis.datasource.url=jdbc:mysql://127.0.0.1:3306/bootsample
+spring.mybatis.datasource.username=root
+spring.mybatis.datasource.password:guang8
         # use druid datasource poll 
-spring.datasource1.type=com.alibaba.druid.pool.Druiddatasource1
-spring.datasource1.driver-class-name=com.mysql.jdbc.Driver
-spring.datasource1.filters=stat
-spring.datasource1.maxActive=20
-spring.datasource1.initialSize=1
-spring.datasource1.maxWait=60000
-spring.datasource1.minIdle=1
-spring.datasource1.timeBetweenEvictionRunsMillis=60000
-spring.datasource1.minEvictableIdleTimeMillis=300000
-spring.datasource1.validationQuery=select 'x'
-spring.datasource1.testWhileIdle=true
-spring.datasource1.testOnBorrow=false
-spring.datasource1.testOnReturn=false
-spring.datasource1.poolPreparedStatements=true
-spring.datasource1.maxOpenPreparedStatements=20
+spring.mybatis.datasource.type=com.alibaba.druid.pool.Druiddatasource1
+spring.mybatis.datasource.driver-class-name=com.mysql.jdbc.Driver
+spring.mybatis.datasource.filters=stat
+spring.mybatis.datasource.maxActive=20
+spring.mybatis.datasource.initialSize=1
+spring.mybatis.datasource.maxWait=60000
+spring.mybatis.datasource.minIdle=1
+spring.mybatis.datasource.timeBetweenEvictionRunsMillis=60000
+spring.mybatis.datasource.minEvictableIdleTimeMillis=300000
+spring.mybatis.datasource.validationQuery=select 'x'
+spring.mybatis.datasource.testWhileIdle=true
+spring.mybatis.datasource.testOnBorrow=false
+spring.mybatis.datasource.testOnReturn=false
+spring.mybatis.datasource.poolPreparedStatements=true
+spring.mybatis.datasource.maxOpenPreparedStatements=20
 
-mybatis.mapperLocations=classpath:mapper/*.xml
-mybatis.typeAliasesPackage=com.gwtjs.springsecurity.entity
+#mybatis.mapperLocations=classpath:mapper/*.xml
+#mybatis.typeAliasesPackage=com.gwtjs.springsecurity.entity
 
 #spring.mvc.view.prefix: /WEB-INF/views/jsp/
 #spring.mvc.view.suffix: .jsp
