--- a/icustom.security/src/main/resources/application.properties
+++ b/icustom.security/src/main/resources/application.properties
@@ -15,7 +15,7 @@ spring.mybatis.datasource.url=jdbc:mysql://127.0.0.1:3306/bootsample
 spring.mybatis.datasource.username=root
 spring.mybatis.datasource.password:guang8
         # use druid datasource poll 
-spring.mybatis.datasource.type=com.alibaba.druid.pool.Druiddatasource1
+spring.mybatis.datasource.type=com.alibaba.druid.pool.DruidDataSource
 spring.mybatis.datasource.driver-class-name=com.mysql.jdbc.Driver
 spring.mybatis.datasource.filters=stat
 spring.mybatis.datasource.maxActive=20
