核心功能完成 add lookup and register and international

--- a/icustom.international/icustom.international.api/pom.xml
+++ b/icustom.international/icustom.international.api/pom.xml
@@ -20,11 +20,19 @@
   </properties>
 	
 	<dependencies> 
-
+		
 		<dependency>
 			<groupId>com.gwtjs.icustom</groupId>
 			<artifactId>icustom.core</artifactId>
 			<version>${project.parent.version}</version>
+			<optional>true</optional>
+		</dependency>
+		
+		<dependency>
+			<groupId>com.gwtjs.icustom</groupId>
+			<artifactId>icustom-spring-boot-starter-mybatis</artifactId>
+			<version>${project.parent.version}</version>
+			<optional>true</optional>
 		</dependency>
 		
 	</dependencies>
