--- a/icustom.international/pom.xml
+++ b/icustom.international/pom.xml
@@ -9,20 +9,11 @@
 	</parent>
 	
 	<artifactId>icustom.international</artifactId>
-	<packaging>jar</packaging>
+	<packaging>pom</packaging>
 	
-	
-	<dependencies>
-		<dependency>
-			<groupId>com.gwtjs.icustom</groupId>
-			<artifactId>icustom.international.api</artifactId>
-			<version>${project.parent.version}</version>
-		</dependency>
-		<dependency>
-			<groupId>com.gwtjs.icustom</groupId>
-			<artifactId>icustom.international.impl</artifactId>
-			<version>${project.parent.version}</version>
-		</dependency>
-	</dependencies>
+	<modules>
+		<module>icustom.international.api</module>
+		<module>icustom.international.impl</module>
+	</modules>
 	
 </project>
