--- a/icustom.lookup/pom.xml
+++ b/icustom.lookup/pom.xml
@@ -9,20 +9,12 @@
 	</parent>
 	
 	<artifactId>icustom.lookup</artifactId>
-	<packaging>jar</packaging>
+	<packaging>pom</packaging>
 	
 	
-	<dependencies>
-		<dependency>
-			<groupId>com.gwtjs.icustom</groupId>
-			<artifactId>icustom.international.api</artifactId>
-			<version>${project.parent.version}</version>
-		</dependency>
-		<dependency>
-			<groupId>com.gwtjs.icustom</groupId>
-			<artifactId>icustom.international.impl</artifactId>
-			<version>${project.parent.version}</version>
-		</dependency>
-	</dependencies>
+	<modules>
+		<module>icustom.lookup.api</module>
+		<module>icustom.lookup.impl</module>
+	</modules>
 	
 </project>
