add module sso develop lookup and register and international

--- a/icustom.register/icustom.register.impl/pom.xml
+++ b/icustom.register/icustom.register.impl/pom.xml
@@ -35,5 +35,12 @@
 			<version>${project.parent.version}</version>
 			<optional>true</optional>
 		</dependency>
+
+		<dependency>
+			<groupId>com.gwtjs.icustom</groupId>
+			<artifactId>icustom-spring-boot-starter-cxf</artifactId>
+			<version>${project.parent.version}</version>
+			<optional>true</optional>
+		</dependency>
 	</dependencies>
 </project>
