--- a/icustom.international/icustom.international.impl/pom.xml
+++ b/icustom.international/icustom.international.impl/pom.xml
@@ -33,7 +33,21 @@
 		
 		<dependency>
 			<groupId>com.gwtjs.icustom</groupId>
+			<artifactId>icustom.log</artifactId>
+			<version>${project.parent.version}</version>
+			<optional>true</optional>
+		</dependency>
+		
+		<dependency>
+			<groupId>com.gwtjs.icustom</groupId>
 			<artifactId>icustom-spring-boot-starter-mybatis</artifactId>
+			<version>${project.parent.version}</version>
+			<optional>true</optional>
+		</dependency>
+
+		<dependency>
+			<groupId>com.gwtjs.icustom</groupId>
+			<artifactId>icustom-spring-boot-starter-cxf</artifactId>
 			<version>${project.parent.version}</version>
 			<optional>true</optional>
 		</dependency>
