--- a/icustom.lookup/icustom.lookup.impl/pom.xml
+++ b/icustom.lookup/icustom.lookup.impl/pom.xml
@@ -25,6 +25,13 @@
 			<artifactId>icustom.lookup.api</artifactId>
 			<version>${project.parent.version}</version>
 		</dependency>
+		
+		<dependency>
+			<groupId>com.gwtjs.icustom</groupId>
+			<artifactId>icustom.log</artifactId>
+			<version>${project.parent.version}</version>
+			<optional>true</optional>
+		</dependency>
 
 		<dependency>
 			<groupId>com.gwtjs.icustom</groupId>
@@ -36,6 +43,13 @@
 		<dependency>
 			<groupId>com.gwtjs.icustom</groupId>
 			<artifactId>icustom-spring-boot-starter-mybatis</artifactId>
+			<version>${project.parent.version}</version>
+			<optional>true</optional>
+		</dependency>
+		
+		<dependency>
+			<groupId>com.gwtjs.icustom</groupId>
+			<artifactId>icustom-spring-boot-starter-cxf</artifactId>
 			<version>${project.parent.version}</version>
 			<optional>true</optional>
 		</dependency>
