--- a/pom.xml
+++ b/pom.xml
@@ -57,12 +57,10 @@
 		<module>icustom.core</module>
 		<module>icustom.cache</module>
 		<module>icustom.api.test.ui</module>
-		<module>icustom.register</module>
-		<module>icustom.lookup</module>
+		<module>icustom.sso</module>
 
 		<!--does not exist-->
 		<module>icustom.devtools</module>
-		<module>icustom.international</module>
 		<module>icustom.excel</module>
 		<module>icustom.email</module>
 		<module>icustom.druid</module>
@@ -80,6 +78,9 @@
 		<module>icustom.security</module>
 		<module>icustom-spring-boot-starters</module>
 		<module>icustom.sample</module>
+		<module>icustom.register</module>
+		<module>icustom.lookup</module>
+		<module>icustom.international</module>
 	</modules>
 
 
