--- a/icustom.sso/pom.xml
+++ b/icustom.sso/pom.xml
@@ -22,10 +22,13 @@
 		<java.version>1.8</java.version>
 	</properties>
 
-	<dependencies>
+	<!-- <dependencies>
+		
 		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter</artifactId>
+			<groupId>com.gwtjs.icustom</groupId>
+			<artifactId>icustom-spring-boot-starter</artifactId>
+			<version>${project.parent.version}</version>
+			<optional>true</optional>
 		</dependency>
 
 		<dependency>
@@ -33,16 +36,16 @@
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
-	</dependencies>
+	</dependencies> -->
 
-	<build>
+	<!-- <build>
 		<plugins>
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
 			</plugin>
 		</plugins>
-	</build>
+	</build> -->
 
 
 </project>
