--- a/icustom.international/icustom.international.impl/pom.xml
+++ b/icustom.international/icustom.international.impl/pom.xml
@@ -26,14 +26,14 @@
 		
 		<dependency>
 			<groupId>com.gwtjs.icustom</groupId>
-			<artifactId>icustom.core</artifactId>
+			<artifactId>icustom-spring-boot-starter</artifactId>
 			<version>${project.parent.version}</version>
 			<optional>true</optional>
 		</dependency>
 		
 		<dependency>
 			<groupId>com.gwtjs.icustom</groupId>
-			<artifactId>icustom.log</artifactId>
+			<artifactId>icustom.core</artifactId>
 			<version>${project.parent.version}</version>
 			<optional>true</optional>
 		</dependency>
