--- a/icustom.email/pom.xml
+++ b/icustom.email/pom.xml
@@ -11,14 +11,28 @@
 	<artifactId>icustom.email</artifactId>
 	<packaging>jar</packaging>
 	
-	<!--
 	<dependencies>
+		
 		<dependency>
-			<groupId>com.gwtjs.ICustom</groupId>
-			<artifactId>ICustom.international.api</artifactId>
+			<groupId>com.gwtjs.icustom</groupId>
+			<artifactId>icustom.core</artifactId>
 			<version>${project.parent.version}</version>
+			<optional>true</optional>
 		</dependency>
+		
+		<dependency>
+			<groupId>com.gwtjs.icustom</groupId>
+			<artifactId>icustom-spring-boot-starter</artifactId>
+			<version>${project.parent.version}</version>
+			<optional>true</optional>
+		</dependency>
+		
+		
+		<dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-mail</artifactId>
+        </dependency>
+        
 	</dependencies>
-	-->
 	
 </project>
