--- a/icustom.lookup/icustom.lookup.impl/pom.xml
+++ b/icustom.lookup/icustom.lookup.impl/pom.xml
@@ -28,7 +28,7 @@
 		
 		<dependency>
 			<groupId>com.gwtjs.icustom</groupId>
-			<artifactId>icustom.log</artifactId>
+			<artifactId>icustom-spring-boot-starter</artifactId>
 			<version>${project.parent.version}</version>
 			<optional>true</optional>
 		</dependency>
