--- a/icustom.web/pom.xml
+++ b/icustom.web/pom.xml
@@ -25,6 +25,12 @@
 		
 		<dependency>
 			<groupId>com.gwtjs.icustom</groupId>
+			<artifactId>icustom.metrics</artifactId>
+			<version>${project.parent.version}</version>
+		</dependency>
+		
+		<dependency>
+			<groupId>com.gwtjs.icustom</groupId>
 			<artifactId>icustom.resources</artifactId>
 			<version>${project.parent.version}</version>
 		</dependency>
