--- a/pom.xml
+++ b/pom.xml
@@ -52,6 +52,8 @@
 	</dependencies>
 
 	<modules>
+		<module>icustom.cloud</module>
+		<module>icustom.attachments</module>
 		<module>icustom.log</module>
 		<module>icustom.util</module>
 		<module>icustom.core</module>
