--- a/icustom.core/pom.xml
+++ b/icustom.core/pom.xml
@@ -25,7 +25,7 @@
 			<artifactId>icustom.log</artifactId>
 			<version>0.0.1-SNAPSHOT</version>
 			<scope>provided</scope>
-			<!-- <optional>true</optional> -->
+			<optional>true</optional>
 		</dependency>
 
 		<dependency>
