--- a/icustom.excel/pom.xml
+++ b/icustom.excel/pom.xml
@@ -11,14 +11,20 @@
 	<artifactId>icustom.excel</artifactId>
 	<packaging>jar</packaging>
 	
-	<!--
 	<dependencies>
 		<dependency>
-			<groupId>com.gwtjs.ICustom</groupId>
-			<artifactId>ICustom.international.api</artifactId>
+			<groupId>com.gwtjs.icustom</groupId>
+			<artifactId>icustom-spring-boot-starter</artifactId>
 			<version>${project.parent.version}</version>
+			<optional>true</optional>
+		</dependency>
+		
+		<dependency>
+			<groupId>com.gwtjs.icustom</groupId>
+			<artifactId>icustom.log</artifactId>
+			<version>0.0.1-SNAPSHOT</version>
+			<optional>true</optional>
 		</dependency>
 	</dependencies>
-	-->
 	
 </project>
