--- a/icustom-spring-boot-starters/icustom-spring-boot-starter-mybatis/pom.xml
+++ b/icustom-spring-boot-starters/icustom-spring-boot-starter-mybatis/pom.xml
@@ -67,6 +67,12 @@
 			<groupId>org.hibernate</groupId>
 			<artifactId>hibernate-core</artifactId>
 		</dependency>
+		
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-orm</artifactId>
+			<optional>true</optional>
+		</dependency>
 
 		<!-- MySQL -->
 		<dependency>
