--- a/icustom-spring-boot-starters/pom.xml
+++ b/icustom-spring-boot-starters/pom.xml
@@ -21,6 +21,7 @@
 		<module>icustom-spring-boot-starter</module>
 		<module>icustom-spring-boot-starter-cxf</module>
 		<module>icustom-spring-boot-starter-mybatis</module>
+		<module>icustom-spring-boot-starter-jedis</module>
 	</modules>
 
 
