--- a/icustom.api.test.ui/pom.xml
+++ b/icustom.api.test.ui/pom.xml
@@ -7,16 +7,24 @@
 		<artifactId>icustom</artifactId>
 		<version>0.0.1-SNAPSHOT</version>
 	</parent>
-	
+
 	<artifactId>icustom.api.test.ui</artifactId>
 	<packaging>jar</packaging>
-	
+
 	<dependencies>
 		<dependency>
 			<groupId>com.gwtjs.icustom</groupId>
+			<artifactId>icustom.log</artifactId>
+			<version>${project.parent.version}</version>
+			<optional>true</optional>
+		</dependency>
+
+		<dependency>
+			<groupId>com.gwtjs.icustom</groupId>
 			<artifactId>icustom-spring-boot-starter</artifactId>
-     		<version>${project.parent.version}</version>
+			<version>${project.parent.version}</version>
+			<optional>true</optional>
 		</dependency>
 	</dependencies>
-	
+
 </project>
