--- a/icustom.jedis-test/pom.xml
+++ b/icustom.jedis-test/pom.xml
@@ -6,7 +6,7 @@
 		<artifactId>icustom</artifactId>
 		<version>0.0.1-SNAPSHOT</version>
 	</parent>
-	<artifactId>icustom.redis</artifactId>
+	<artifactId>icustom.jedis-test</artifactId>
 	<name>icustom redis</name>
 	<description>icustom redis</description>
 	
@@ -26,21 +26,13 @@
 			<optional>true</optional>
 		</dependency>
 		
-		<!-- <dependency>
+		<!-- Compile -->
+		<dependency>
 			<groupId>com.gwtjs.icustom</groupId>
 			<artifactId>icustom-spring-boot-starter-jedis</artifactId>
 			<version>${project.parent.version}</version>
 			<optional>true</optional>
-		</dependency> -->
-		<!-- Compile -->
-		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-data-redis</artifactId>
 		</dependency>
-		<dependency>  
-            <groupId>redis.clients</groupId>  
-            <artifactId>jedis</artifactId>  
-        </dependency>
 
 	</dependencies>
 	
