--- a/pom.xml
+++ b/pom.xml
@@ -70,6 +70,7 @@
 
 		<module>icustom.resources</module>
 		<module>icustom.bbs</module>
+		<module>icustom.redis</module>
 		<module>icustom.session</module>
 		<module>icustom.session.redis</module>
 		<module>icustom.metrics</module>
