--- a/icustom-spring-boot-starters/icustom-spring-boot-starter-jedis/pom.xml
+++ b/icustom-spring-boot-starters/icustom-spring-boot-starter-jedis/pom.xml
@@ -1,6 +1,6 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"  
-    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">  
-    <modelVersion>4.0.0</modelVersion>  
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+	<modelVersion>4.0.0</modelVersion>
 	
 	<parent>
 		<groupId>com.gwtjs.icustom</groupId>
@@ -9,29 +9,27 @@
 	</parent>
 
     <artifactId>icustom-spring-boot-starter-jedis</artifactId>
-      
-    <dependencies>  
-        <dependency>
-			<groupId>com.gwtjs.icustom</groupId>
-			<artifactId>icustom.log</artifactId>
-			<version>${project.parent.version}</version>
-			<optional>true</optional>
-		</dependency>
-		
-		<dependency>
-			<groupId>com.gwtjs.icustom</groupId>
-			<artifactId>icustom-spring-boot-starter</artifactId>
-			<version>${project.parent.version}</version>
-			<optional>true</optional>
-		</dependency>
 
-        <dependency>  
-            <groupId>org.springframework.boot</groupId>  
-            <artifactId>spring-boot-autoconfigure</artifactId>  
-        </dependency>  
-        <dependency>  
-            <groupId>redis.clients</groupId>  
-            <artifactId>jedis</artifactId>  
-        </dependency>  
-    </dependencies>  
+	<properties>
+		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+		<boot.version>1.5.3.RELEASE</boot.version>
+	</properties>
+
+	<dependencies>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot</artifactId>
+			<version>${boot.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-autoconfigure</artifactId>
+			<version>${boot.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>redis.clients</groupId>
+			<artifactId>jedis</artifactId>
+			<version>2.8.2</version>
+		</dependency>
+	</dependencies>
 </project>
