--- a/icustom.jedis-test/pom.xml
+++ b/icustom.jedis-test/pom.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
 		<groupId>com.gwtjs.icustom</groupId>
@@ -9,23 +10,23 @@
 	<artifactId>icustom.jedis-test</artifactId>
 	<name>icustom redis</name>
 	<description>icustom redis</description>
-	
+
 	<dependencies>
-		
+
 		<dependency>
 			<groupId>com.gwtjs.icustom</groupId>
 			<artifactId>icustom-spring-boot-starter</artifactId>
 			<version>${project.parent.version}</version>
 			<optional>true</optional>
 		</dependency>
-		
+
 		<dependency>
 			<groupId>com.gwtjs.icustom</groupId>
 			<artifactId>icustom.log</artifactId>
 			<version>${project.parent.version}</version>
 			<optional>true</optional>
 		</dependency>
-		
+
 		<!-- Compile -->
 		<dependency>
 			<groupId>com.gwtjs.icustom</groupId>
@@ -33,14 +34,24 @@
 			<version>${project.parent.version}</version>
 			<optional>true</optional>
 		</dependency>
+		
+		<dependency>  
+            <groupId>org.springframework.boot</groupId>  
+            <artifactId>spring-boot-starter-web</artifactId>  
+        </dependency>  
+        <dependency>  
+            <groupId>org.springframework.boot</groupId>  
+            <artifactId>spring-boot-starter-test</artifactId>  
+            <scope>test</scope>  
+        </dependency> 
 
 	</dependencies>
-	
+
 	<profiles>
 		<profile>
 			<id>production</id>
 			<dependencies>
-				<!-- This sample is a test for the autoconfig when commons-pool is *absent*.
+				<!-- This sample is a test for the autoconfig when commons-pool is *absent*. 
 					In production it would be useful to enable pooling by using this dependency. -->
 				<dependency>
 					<groupId>commons-pool</groupId>
@@ -55,6 +66,37 @@
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
+				<configuration>
+					<fork>true</fork>
+					<mainClass>com.gwtjs.icustom.jedis.ICustomJedisApplication</mainClass>
+				</configuration>
+				<executions>
+					<execution>
+						<goals>
+							<goal>repackage</goal>
+						</goals>
+					</execution>
+				</executions>
+			</plugin>
+			<plugin>
+				<groupId>org.jacoco</groupId>
+				<artifactId>jacoco-maven-plugin</artifactId>
+				<!--<version>0.7.8-SNAPSHOT</version> -->
+				<executions>
+					<execution>
+						<id>jacoco-initialize</id>
+						<goals>
+							<goal>prepare-agent</goal>
+						</goals>
+					</execution>
+					<execution>
+						<id>jacoco-site</id>
+						<phase>verify</phase>
+						<goals>
+							<goal>report</goal>
+						</goals>
+					</execution>
+				</executions>
 			</plugin>
 		</plugins>
 	</build>
