--- a/icustom.druid/pom.xml
+++ b/icustom.druid/pom.xml
@@ -16,7 +16,7 @@
 		<dependency>
 			<groupId>com.gwtjs.ICustom</groupId>
 			<artifactId>ICustom.international.api</artifactId>
-			<version>${project.parent.version}</version>
+			<version>${project.version}</version>
 		</dependency>
 	</dependencies>
 	-->
