--- a/icustom.jedis-test/src/main/resources/application.yml
+++ b/icustom.jedis-test/src/main/resources/application.yml
@@ -1,6 +1,7 @@
 jedis : 
-  host : 127.0.0.1
+  host : 192.168.247.136
   port : 6379
+  #auth : 123456
   maxTotal: 100
   maxIdle: 10
   maxWaitMillis : 100000
