--- a/icustom.web/src/main/resources/application.properties
+++ b/icustom.web/src/main/resources/application.properties
@@ -1,4 +1,10 @@
+server.port=8008
+app.name=icustom.framework
+app.version=1.0.0
 
+management.security.enabled=false
+
+endpoints.health.sensitive=false
 
 spring.datasource.url=jdbc:mysql://127.0.0.1:3306/bootsample?useUnicode=true&characterEncoding=UTF-8
 spring.datasource.username=root
