--- a/icustom.bbs/pom.xml
+++ b/icustom.bbs/pom.xml
@@ -15,7 +15,7 @@
 		<dependency>
 			<groupId>com.gwtjs.icustom</groupId>
 			<artifactId>icustom.log</artifactId>
-			<version>${project.parent.version}</version>
+			<version>${project.version}</version>
 			<optional>true</optional>
 		</dependency>
 	</dependencies>
