--- a/icustom.email/pom.xml
+++ b/icustom.email/pom.xml
@@ -16,14 +16,14 @@
 		<dependency>
 			<groupId>com.gwtjs.icustom</groupId>
 			<artifactId>icustom.core</artifactId>
-			<version>${project.parent.version}</version>
+			<version>${project.version}</version>
 			<optional>true</optional>
 		</dependency>
 		
 		<dependency>
 			<groupId>com.gwtjs.icustom</groupId>
 			<artifactId>icustom-spring-boot-starter</artifactId>
-			<version>${project.parent.version}</version>
+			<version>${project.version}</version>
 			<optional>true</optional>
 		</dependency>
 		
