--- a/icustom.international/icustom.international.api/pom.xml
+++ b/icustom.international/icustom.international.api/pom.xml
@@ -24,14 +24,14 @@
 		<dependency>
 			<groupId>com.gwtjs.icustom</groupId>
 			<artifactId>icustom.core</artifactId>
-			<version>${project.parent.version}</version>
+			<version>${project.version}</version>
 			<optional>true</optional>
 		</dependency>
 		
 		<dependency>
 			<groupId>com.gwtjs.icustom</groupId>
 			<artifactId>icustom-spring-boot-starter-mybatis</artifactId>
-			<version>${project.parent.version}</version>
+			<version>${project.version}</version>
 			<optional>true</optional>
 		</dependency>
 		
