--- a/icustom.metrics/pom.xml
+++ b/icustom.metrics/pom.xml
@@ -15,7 +15,7 @@
         <dependency>
 			<groupId>com.gwtjs.icustom</groupId>
 			<artifactId>icustom-spring-boot-starter</artifactId>
-			<version>${project.parent.version}</version>
+			<version>${project.version}</version>
 		</dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
