--- a/icustom-spring-boot-starters/icustom-spring-boot-starter-mybatis/pom.xml
+++ b/icustom-spring-boot-starters/icustom-spring-boot-starter-mybatis/pom.xml
@@ -11,9 +11,9 @@
 
 	<parent>
 		<groupId>com.gwtjs.icustom</groupId>
-		<artifactId>icustom</artifactId>
-		<version>0.0.1-SNAPSHOT</version>
-		<relativePath/> <!-- lookup parent from repository -->
+		<artifactId>icustom-spring-boot-starters</artifactId>
+		<version>0.1.1-SNAPSHOT</version>
+		<relativePath>../pom.xml</relativePath><!-- lookup parent from repository -->
 	</parent>
 
 	<properties>
@@ -27,21 +27,21 @@
 		<dependency>
 			<groupId>com.gwtjs.icustom</groupId>
 			<artifactId>icustom.core</artifactId>
-			<version>0.0.1-SNAPSHOT</version>
+			<version>0.1.1-SNAPSHOT</version>
 			<optional>true</optional>
 		</dependency>
 		
 		<dependency>
 			<groupId>com.gwtjs.icustom</groupId>
 			<artifactId>icustom.log</artifactId>
-			<version>0.0.1-SNAPSHOT</version>
+			<version>0.1.1-SNAPSHOT</version>
 			<optional>true</optional>
 		</dependency>
 		
 		<dependency>
 			<groupId>com.gwtjs.icustom</groupId>
 			<artifactId>icustom.util</artifactId>
-			<version>0.0.1-SNAPSHOT</version>
+			<version>0.1.1-SNAPSHOT</version>
 			<optional>true</optional>
 		</dependency>
 		
