--- a/icustom-spring-boot-starters/pom.xml
+++ b/icustom-spring-boot-starters/pom.xml
@@ -6,12 +6,11 @@
 	<parent>
 		<groupId>com.gwtjs.icustom</groupId>
 		<artifactId>icustom</artifactId>
-		<version>0.0.1-SNAPSHOT</version>
+		<version>0.1.1-SNAPSHOT</version>
+		<relativePath>../pom.xml</relativePath><!-- lookup parent from repository -->
 	</parent>
 
-	<groupId>com.gwtjs.icustom</groupId>
 	<artifactId>icustom-spring-boot-starters</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
 	<packaging>pom</packaging>
 	
 	<name>icustom-spring-boot-starters</name>
