--- a/icustom-spring-boot-starters/icustom-spring-boot-starter-jedis/pom.xml
+++ b/icustom-spring-boot-starters/icustom-spring-boot-starter-jedis/pom.xml
@@ -4,16 +4,12 @@
 	
 	<parent>
 		<groupId>com.gwtjs.icustom</groupId>
-		<artifactId>icustom</artifactId>
-		<version>0.0.1-SNAPSHOT</version>
+		<artifactId>icustom-spring-boot-starters</artifactId>
+		<version>0.1.1-SNAPSHOT</version>
+		<relativePath>../pom.xml</relativePath><!-- lookup parent from repository -->
 	</parent>
 
     <artifactId>icustom-spring-boot-starter-jedis</artifactId>
-
-	<properties>
-		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-		<boot.version>1.5.3.RELEASE</boot.version>
-	</properties>
 
 	<dependencies>
 		<dependency>
@@ -28,12 +24,7 @@
 			<version>${project.version}</version>
 			<optional>true</optional>
 		</dependency>
-		<dependency>
-			<groupId>com.gwtjs.icustom</groupId>
-			<artifactId>icustom-spring-boot-starter-jedis</artifactId>
-			<version>${project.version}</version>
-			<optional>true</optional>
-		</dependency>
+		
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-autoconfigure</artifactId>
