--- a/icustom.cache/pom.xml
+++ b/icustom.cache/pom.xml
@@ -4,8 +4,10 @@
 	<parent>
 		<groupId>com.gwtjs.icustom</groupId>
 		<artifactId>icustom</artifactId>
-		<version>0.0.1-SNAPSHOT</version>
+		<version>0.1.1-SNAPSHOT</version>
+		<relativePath>../pom.xml</relativePath><!-- lookup parent from repository -->
 	</parent>
+
 	<artifactId>icustom.cache</artifactId>
 	<name>icustom.cache</name>
 	<description>icustom Cache core</description>
