--- a/icustom.excel/pom.xml
+++ b/icustom.excel/pom.xml
@@ -5,7 +5,8 @@
 	<parent>
 		<groupId>com.gwtjs.icustom</groupId>
 		<artifactId>icustom</artifactId>
-		<version>0.0.1-SNAPSHOT</version>
+		<version>0.1.1-SNAPSHOT</version>
+		<relativePath>../pom.xml</relativePath><!-- lookup parent from repository -->
 	</parent>
 	
 	<artifactId>icustom.excel</artifactId>
@@ -22,7 +23,7 @@
 		<dependency>
 			<groupId>com.gwtjs.icustom</groupId>
 			<artifactId>icustom.log</artifactId>
-			<version>0.0.1-SNAPSHOT</version>
+			<version>0.1.1-SNAPSHOT</version>
 			<optional>true</optional>
 		</dependency>
 	</dependencies>
