--- a/icustom.international/icustom.international.api/pom.xml
+++ b/icustom.international/icustom.international.api/pom.xml
@@ -4,8 +4,9 @@
 	
 	<parent>
 		<groupId>com.gwtjs.icustom</groupId>
-		<artifactId>icustom</artifactId>
-		<version>0.0.1-SNAPSHOT</version>
+		<artifactId>icustom.international</artifactId>
+		<version>0.1.1-SNAPSHOT</version>
+		<relativePath>../pom.xml</relativePath><!-- lookup parent from repository -->
 	</parent>
 
   
