--- a/icustom.parent/pom.xml
+++ b/icustom.parent/pom.xml
@@ -7,7 +7,7 @@
 
 	<groupId>com.gwtjs.icustom</groupId>
 	<artifactId>icustom-parent</artifactId>
-	<version>1.0.0.BUILD-SNAPSHOT</version>
+	<version>0.1.1-SNAPSHOT</version>
 	<packaging>pom</packaging>
 
 	<properties>
