--- a/icustom.security/icustom.security.annotation/pom.xml
+++ b/icustom.security/icustom.security.annotation/pom.xml
@@ -11,9 +11,9 @@
 
 	<parent>
 		<groupId>com.gwtjs.icustom</groupId>
-		<artifactId>icustom</artifactId>
-		<version>0.0.1-SNAPSHOT</version>
-		<relativePath/> <!-- lookup parent from repository -->
+		<artifactId>icustom.security</artifactId>
+		<version>0.1.1-SNAPSHOT</version>
+		<relativePath>../pom.xml</relativePath><!-- lookup parent from repository -->
 	</parent>
 
 	<properties>
