security core commit

--- a/icustom.web/src/main/resources/application.properties
+++ b/icustom.web/src/main/resources/application.properties
@@ -1,28 +1,35 @@
-server.port=8008
-app.name=icustom.framework
-app.version=1.0.0
 
-management.security.enabled=false
+# oracle bootcustom/guang8;
+# mysql  root/guang8
 
-endpoints.health.sensitive=false
+#spring.datasource.url=jdbc:mysql://127.0.0.1:3306/bootcustom?useUnicode=true&characterEncoding=UTF-8
+#spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+#spring.datasource.username=root
 
-spring.datasource.url=jdbc:mysql://127.0.0.1:3306/bootsample?useUnicode=true&characterEncoding=UTF-8
-spring.datasource.username=root
+spring.datasource.url=jdbc:oracle:thin:@192.168.247.138:1521:orcl
+spring.datasource.driver-class-name=oracle.jdbc.driver.OracleDriver
+spring.datasource.username=bootcustom
+
 spring.datasource.password=guang8
-spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jackson.serialization.indent_output=true
 
 # mybatis
-spring.mybatis.datasource.name=bootsample
-spring.mybatis.datasource.url=jdbc:mysql://127.0.0.1:3306/bootsample
-spring.mybatis.datasource.username=root
+#spring.mybatis.datasource.name=bootcustom
+#spring.mybatis.datasource.url=jdbc:mysql://127.0.0.1:3306/bootcustom
+#spring.mybatis.datasource.username=root
+#spring.mybatis.datasource.driver-class-name=com.mysql.jdbc.Driver
+
+spring.mybatis.datasource.name=bootcustom
+spring.mybatis.datasource.url=jdbc:oracle:thin:@192.168.247.138:1521:orcl
+spring.mybatis.datasource.username=bootcustom
+spring.mybatis.datasource.driver-class-name=oracle.jdbc.driver.OracleDriver
+
 spring.mybatis.datasource.password=guang8
         # use druid datasource poll 
 spring.mybatis.datasource.type=com.alibaba.druid.pool.DruidDataSource
-spring.mybatis.datasource.driver-class-name=com.mysql.jdbc.Driver
 spring.mybatis.datasource.filters=stat
 spring.mybatis.datasource.maxActive=20
 spring.mybatis.datasource.initialSize=1
