--- a/icustom.security/pom.xml
+++ b/icustom.security/pom.xml
@@ -24,7 +24,7 @@
 
 	<modules>
 		<module>icustom.security.annotation</module>
-		<module>icustom.security.config</module>
+		<module>icustom.security.core</module>
 		<module>icustom.security.ui</module>
 		<module>icustom.security.api</module>
 	</modules>
