--- a/icustom.web/pom.xml
+++ b/icustom.web/pom.xml
@@ -48,6 +48,12 @@
 			<artifactId>icustom.security.core</artifactId>
 			<version>${project.version}</version>
 		</dependency>
+
+		<dependency>
+			<groupId>com.gwtjs.icustom</groupId>
+			<artifactId>icustom.security.api</artifactId>
+			<version>${project.version}</version>
+		</dependency>
 		
 		<dependency>
 			<groupId>com.gwtjs.icustom</groupId>
