--- a/icustom.security/icustom.security.core/pom.xml
+++ b/icustom.security/icustom.security.core/pom.xml
@@ -52,6 +52,7 @@
 			<groupId>com.gwtjs.icustom</groupId>
 			<artifactId>icustom-spring-boot-starter-mybatis</artifactId>
 			<version>${project.version}</version>
+			<optional>true</optional>
 		</dependency>
 		
 		<dependency>
