--- a/icustom.activiti/pom.xml
+++ b/icustom.activiti/pom.xml
@@ -7,7 +7,7 @@
 	<packaging>jar</packaging>
 
 	<parent>
-		<groupId>${project.groupId}</groupId>
+		<groupId>com.gwtjs.icustom</groupId>
 		<artifactId>icustom</artifactId>
 		<version>0.7.6.28</version>
 		<relativePath>../pom.xml</relativePath><!-- lookup parent from repository -->
