--- a/icustom.attachments/pom.xml
+++ b/icustom.attachments/pom.xml
@@ -26,6 +26,12 @@
 			<version>0.7.6.28</version>
 			<optional>true</optional>
 		</dependency>
+		
+		<dependency>
+			<groupId>commons-fileupload</groupId>
+			<artifactId>commons-fileupload</artifactId>
+			<version>1.2.1</version>
+		</dependency>
 
 		<dependency>
 			<groupId>javax.validation</groupId>
@@ -37,6 +43,7 @@
 			<groupId>javax.servlet</groupId>
 			<artifactId>javax.servlet-api</artifactId>
 			<optional>true</optional>
+			<scope>provided</scope>
 		</dependency>
 		<dependency>
 			<groupId>javax.servlet</groupId>
