--- a/icustom.log/pom.xml
+++ b/icustom.log/pom.xml
@@ -22,15 +22,15 @@
 		<java.version>1.8</java.version>
 	</properties>
 
-	<!-- <dependencies>
-		
+	<dependencies>
+
 		<dependency>
 			<groupId>${project.groupId}</groupId>
 			<artifactId>icustom-spring-boot-starter</artifactId>
 			<version>${project.version}</version>
 			<optional>true</optional>
 		</dependency>
-		
+
 	</dependencies>
 
 	<build>
@@ -40,7 +40,7 @@
 				<artifactId>spring-boot-maven-plugin</artifactId>
 			</plugin>
 		</plugins>
-	</build> -->
+	</build>
 
 
 </project>
