--- a/icustom.core/pom.xml
+++ b/icustom.core/pom.xml
@@ -24,7 +24,7 @@
 		<dependency>
 			<groupId>${project.groupId}</groupId>
 			<artifactId>icustom.log</artifactId>
-			<version>0.7.6.28</version>
+			<version>${project.version}</version>
 			<scope>provided</scope>
 			<optional>true</optional>
 		</dependency>
@@ -32,7 +32,7 @@
 		<dependency>
 			<groupId>${project.groupId}</groupId>
 			<artifactId>icustom.util</artifactId>
-			<version>0.7.6.28</version>
+			<version>${project.version}</version>
 		</dependency>
 
 		<dependency>
