--- a/icustom.log/pom.xml
+++ b/icustom.log/pom.xml
@@ -7,7 +7,7 @@
 	<packaging>jar</packaging>
 
 	<name>icustom.log</name>
-	<description>Demo project for Spring Boot</description>
+	<description>icustom log project</description>
 
 	<parent>
 		<groupId>com.gwtjs.icustom</groupId>
@@ -15,12 +15,6 @@
 		<version>0.7.6.28</version>
 		<relativePath>../pom.xml</relativePath><!-- lookup parent from repository -->
 	</parent>
-
-	<properties>
-		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-		<java.version>1.8</java.version>
-	</properties>
 
 	<dependencies>
 
@@ -32,15 +26,6 @@
 		</dependency>
 
 	</dependencies>
-
-	<build>
-		<plugins>
-			<plugin>
-				<groupId>org.springframework.boot</groupId>
-				<artifactId>spring-boot-maven-plugin</artifactId>
-			</plugin>
-		</plugins>
-	</build>
 
 
 </project>
