--- a/icustom.log/pom.xml
+++ b/icustom.log/pom.xml
@@ -7,25 +7,40 @@
 	<packaging>jar</packaging>
 
 	<name>icustom.log</name>
-	<description>icustom log project</description>
+	<description>Demo project for Spring Boot</description>
 
 	<parent>
 		<groupId>com.gwtjs.icustom</groupId>
 		<artifactId>icustom</artifactId>
-		<version>0.7.6.28</version>
+		<version>0.7.6.28-SNAPSHOT</version>
 		<relativePath>../pom.xml</relativePath><!-- lookup parent from repository -->
 	</parent>
 
-	<dependencies>
+	<properties>
+		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
+		<java.version>1.8</java.version>
+	</properties>
 
+	<!-- <dependencies>
+		
 		<dependency>
-			<groupId>${project.groupId}</groupId>
+			<groupId>com.gwtjs.icustom</groupId>
 			<artifactId>icustom-spring-boot-starter</artifactId>
 			<version>${project.version}</version>
 			<optional>true</optional>
 		</dependency>
-
+		
 	</dependencies>
+
+	<build>
+		<plugins>
+			<plugin>
+				<groupId>org.springframework.boot</groupId>
+				<artifactId>spring-boot-maven-plugin</artifactId>
+			</plugin>
+		</plugins>
+	</build> -->
 
 
 </project>
