--- a/icustom.cloud/eureka-server/pom.xml
+++ b/icustom.cloud/eureka-server/pom.xml
@@ -23,6 +23,12 @@
 			<version>${project.version}</version>
 			<optional>true</optional>
 		</dependency>
+		<dependency>
+			<groupId>${project.groupId}</groupId>
+			<artifactId>icustom.core</artifactId>
+			<version>${project.version}</version>
+			<optional>true</optional>
+		</dependency>
 	</dependencies>
 	<build>
 		<plugins>
