--- a/icustom.security/icustom.security.core/pom.xml
+++ b/icustom.security/icustom.security.core/pom.xml
@@ -96,12 +96,7 @@
 		<dependency>
 			<groupId>javax.servlet</groupId>
 			<artifactId>jstl</artifactId>
-			<optional>true</optional>
-		</dependency>
-
-		<dependency>
-			<groupId>javax.servlet</groupId>
-			<artifactId>jstl</artifactId>
+			<version>1.2</version>
 			<optional>true</optional>
 		</dependency>
 
