--- a/icustom.cloud/pom.xml
+++ b/icustom.cloud/pom.xml
@@ -5,29 +5,23 @@
 
 	<artifactId>icustom.cloud</artifactId>
 	<packaging>pom</packaging>
-
-	<name>icustom.cloud</name>
-	<description>icustom spring boot cloud</description>
-
+	
 	<parent>
 		<groupId>com.gwtjs.icustom</groupId>
 		<artifactId>icustom</artifactId>
 		<version>0.7.6.28</version>
-		<relativePath>../pom.xml</relativePath><!-- lookup parent from repository -->
+		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
-	
-	<modules>
-		<module>eureka-server</module>
-		<module>eureka-client</module>
-	</modules>
-	<build>
-		<plugins>
-			<plugin>
-				<groupId>org.springframework.boot</groupId>
-				<artifactId>spring-boot-maven-plugin</artifactId>
-			</plugin>
-		</plugins>
-	</build>
 
+	<modules>
+		<!--common core -->
+		<module>icustom.cloud-eureka-server</module>
+		<module>icustom.cloud-eureka-client</module>
+		<module>icustom.cloud-service-ribbon</module>
+		<module>icustom.cloud-service-feign</module>
+		<module>icustom.cloud-service-zuul</module>
+		<module>icustom.cloud-config-server</module>
+		<module>icustom.cloud-config-client</module>
+	</modules>
 
 </project>
