--- a/icustom.data/icustom.data.druid/pom.xml
+++ b/icustom.data/icustom.data.druid/pom.xml
@@ -6,10 +6,10 @@
 		<groupId>com.gwtjs.icustom</groupId>
 		<artifactId>icustom</artifactId>
 		<version>0.7.10.8</version>
-		<relativePath>../pom.xml</relativePath><!-- lookup parent from repository -->
+		<relativePath>../../pom.xml</relativePath><!-- lookup parent from repository -->
 	</parent>
 	
-	<artifactId>icustom.druid</artifactId>
+	<artifactId>icustom.data.druid</artifactId>
 	<packaging>jar</packaging>
 	
 	<!--
