--- a/icustom.data/icustom.data.mongodb/pom.xml
+++ b/icustom.data/icustom.data.mongodb/pom.xml
@@ -5,9 +5,9 @@
 		<groupId>com.gwtjs.icustom</groupId>
 		<artifactId>icustom</artifactId>
 		<version>0.7.10.8</version>
-		<relativePath>../pom.xml</relativePath><!-- lookup parent from repository -->
+		<relativePath>../../pom.xml</relativePath><!-- lookup parent from repository -->
 	</parent>
-	<artifactId>icustom.mongodb</artifactId>
+	<artifactId>icustom.data.mongodb</artifactId>
 	<dependencies>
 		<dependency>
 			<groupId>${project.groupId}</groupId>
