--- a/icustom.data/icustom.data.redis/pom.xml
+++ b/icustom.data/icustom.data.redis/pom.xml
@@ -7,11 +7,11 @@
 		<groupId>com.gwtjs.icustom</groupId>
 		<artifactId>icustom</artifactId>
 		<version>0.7.10.8</version>
-		<relativePath>../pom.xml</relativePath><!-- lookup parent from repository -->
+		<relativePath>../../pom.xml</relativePath><!-- lookup parent from repository -->
 	</parent>
 	
-	<artifactId>icustom.redis</artifactId>
-	<name>icustom redis</name>
+	<artifactId>icustom.data.redis</artifactId>
+	<name>icustom.data.redis</name>
 	<description>icustom redis</description>
 	
 	<dependencies>
